--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -325,7 +325,7 @@ h6 {
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
-#preloader {
+/* #preloader {
   position: fixed;
   top: 0;
   left: 0;
@@ -430,7 +430,7 @@ h6 {
       clip: rect(62px, 9999px, 84px, 0);
       transform: translate(-2px);
   }
-}
+} */
 /*--------------------------------------------------------------
 # Scroll Top Button
 --------------------------------------------------------------*/
