--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -791,6 +791,16 @@ transform-origin: top right;
   font-size: 16px;
 }
 
+.stats-item span::after {
+  content: '+';
+  margin-left: 2px;
+  font-weight: bold;
+}
+
+.experience-item .stats-item span::after {
+  content: '';
+}
+
 /*--------------
 # Skills Section
 ----------------*/
