--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,17 +10,12 @@
 /*-------------
 Global Colors 
 --------------*/
-:root {
+:root { 
   --primary-color: #ee0000;
-  --secondary-color: #ffffff;
-  --background-color: #000000;
   --text-color: #f6f6f6;
   --accent-color: #101010;
-  --scrollbar-bg: #101010;
-  --scrollbar-thumb: #ee0000;
-}
-:root { 
   --background-color: #000000;
+  --secondary-color: #ffffff;
   --default-color: #ffffff;
   --heading-color: #f6f6f6;
   --surface-color: #101010;
@@ -28,10 +23,9 @@ Global Colors
   --accent-color: #ee0000;
   --nav-color: #ffffff;
   --nav-hover-color: #ee0000;
-  --nav-mobile-background-color: #ffffff;
-  --nav-dropdown-background-color: #ffffff;
-  --nav-dropdown-color: #212529;
-  --nav-dropdown-hover-color: #0563bb;
+  --scrollbar-bg: #101010;
+  --scrollbar-thumb: #ee0000;
+
 }
 
 /*-----------
@@ -40,7 +34,7 @@ Smooth scroll
 :root {
   scroll-behavior: smooth;
 }
-/* Smooth Scrolling for Internal Links */
+
 html {
   scroll-behavior: smooth;
 }
@@ -76,7 +70,7 @@ a[href^="#"] {
 # General Styling & Shared Classes
 ----------------------------------*/
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   color: var(--text-color);
   background-color: var(--background-color);
   margin: 0;
@@ -124,6 +118,7 @@ body::-webkit-scrollbar-thumb:hover {
 /* ----------------
 Email Form Messages
 -------------------*/
+
 .email-form .error-message {
   display: none;
   background: #df1529;
@@ -809,6 +804,51 @@ transform-origin: top right;
   margin-right: 5px;
   color: var(--accent-color);
   line-height: 0;
+}
+
+/* Button Styles */
+.btn-download-cv {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  background-color: #ee0000;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  border: none;
+  border-radius: 50px;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+  position: relative;
+}
+
+.btn-download-cv:hover {
+  background-color: #ffffff;
+  transform: scale(1.1); 
+  box-shadow: 0 8px 15px rgba(255, 46, 46, 0.2);
+}
+
+.btn-download-cv:before {
+  font-weight: 900;
+  margin-right: 10px;
+  font-size: 20px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.btn-download-cv:hover:before {
+  transform: translateX(5px);
+}
+
+.btn-download-cv:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.5); 
+}
+
+/* Optional: Adding a small ripple effect on click */
+.btn-download-cv:active {
+  transform: scale(0.95);
+  transition: all 0.1s ease-in-out;
 }
 
 /*-------------
